--- a/views/index.html
+++ b/views/index.html
@@ -6,30 +6,18 @@
       Intermediate SimpleWebRTC Demo
     </title>
   </head>
-
-  <body>
-
-    <h1 id="title">
-      Start a room
-    </h1>
-
-    <link rel="stylesheet" href="/css/main.css">
-
-    <button id="screenShareButton"></button>
+  <body style="overflow:hidden;">
 
     <p id="subTitle"></p>
 
     <form id="createRoom">
       <input id="sessionInput" />
-      <button type="submit">Create it!</button>
+      <button type="submit">Create Room!</button>
     </form>
 
+    <video id="localVideo" oncontextmenu="return false;"></video>
 
-    <video id="localVideo" style="height: 400px;" oncontextmenu="return false;"></video>
-    <div id="localVolume" class="volume_bar"></div>
-
-
-    <div id="remotes"></div>
+    <div id="remotes" style="width:20px;"></div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 
